overflow-x on main app and some minor load ajax fix

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -518,7 +518,7 @@ div#notes-all-container{
     box-shadow: inset 2px 2px 1px rgba(0,0,0, .1),
                 inset  0 -8px 8px -8px #696868;
     /* margin-left: 1em; */
-    height: 10em;
+    height: 13em;
     margin-top: 1em;
     width: 100%;
     overflow-x: auto;
@@ -550,6 +550,7 @@ div.note-note-container{
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
     z-index: 1;
+    font-size: 1.2em;
 }
 
 div.note-note-container:hover{
@@ -579,7 +580,7 @@ div.notes-box-remove:hover{
 div#notes-container{
     /* border: 1px solid black; */
     /* margin-top: 1em; */
-    height: 13em;
+    height: 16em;
     width: 100%;
     /* text-align: center; */
     /* overflow-y: scroll; */
@@ -595,7 +596,7 @@ div.notes-control-button {
     z-index: 10;
     width: 20%;
     max-width: 5em;
-    height: 12em;
+    height: 15em;
     /* background: #fff; */
     /* margin-top: 1em;* 
     margin-right: 1pt;
